--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+    <title>Page Title</title>
 </head>
+
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <h1>This is a Heading</h1>
 
-<a href="tareaPreviaSesion7/index.html" >El País</a>
-
+    <section id="contenedor">
+        <div class="elemento">
+            <a href="tareaPreviaSesion7/index.html">El País</a>
+        </div>
+    </section>
 </body>
+
 </html>
