--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Page Title</title>
+    <link href="estilos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -11,7 +12,19 @@
 
     <section id="contenedor">
         <div class="elemento">
-            <a href="tareaPreviaSesion7/index.html">El País</a>
+            <a href="tareaPreviaSesion7/index.html">EL PAÍS</a>
+        </div>
+        <div class="elemento">
+            <a href="Sesion10/codigo_inicio/index.html">GALERÍA DE IMÁGENES</a>
+        </div>
+        <div class="elemento">
+            <a href="#">3</a>
+        </div>
+        <div class="elemento">
+            <a href="#">4</a>
+        </div>
+        <div class="elemento">
+            <a href="#">5</a>
         </div>
     </section>
 </body>
