--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Page Title</title>
     <link href="estilos.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <h1>This is a Heading</h1>
+    <h1>ÍNDICE DE EJERCICIOS</h1>
 
     <section id="contenedor">
         <div class="elemento">
