--- a/tareaPreviaSesion7/index.html
+++ b/tareaPreviaSesion7/index.html
@@ -16,7 +16,7 @@
                 <img src="img/cabecera_interior_blanco.svg" alt="ElPaís">
             </li>
             <li>
-                <img src="img/thinkbigempresas.svg" alt="ElPaís">
+                <a id="TE" href="#" ><img src="img/thinkbigempresas.svg" alt="ElPaís"></a>
             </li>
             <li>
                 <img src="img/telefonica-empresas-vertical.svg" alt="ElPaís">
