--- a/Sesion16/index.html
+++ b/Sesion16/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Adove</title>
+    <meta charset="utf-8">
+    <title>Adobe</title>
     <link href="estilos.css" rel="stylesheet" />
   </head>
 
