--- a/Sesion16/index.html
+++ b/Sesion16/index.html
@@ -9,11 +9,15 @@
   <body>
     <main>
       <header>
-        <p>Cabecera</p>
+        <section class="C">
+          <img src="imagenes/Adobe_Systems_logo_and_wordmark.svg" alt="adobe">
+        </section>
+      <section class="D">
+
+      </section>
       </header>
       <section class="A"></section>
       <section class="B"></section>
-      <img id="imagen" src="imagenes/fondo-1400x860.jpg" alt="adobe" >
     </main>
     <footer></footer>
   </body>
