--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="Sesion10/codigo_inicio/index.html">GALERÍA DE IMÁGENES</a>
         </div>
         <div class="elemento">
-            <a href="#">3</a>
+            <a href="Sesion20/index.html">Casting Tipográfico</a>
         </div>
         <div class="elemento">
             <a href="#">4</a>
