--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="tareaPreviaSesion7/index.html">EL PAÍS</a>
         </div>
         <div class="elemento">
-            <a href="Sesion10/codigo_inicio/index.html">GALERÍA DE IMÁGENES</a>
+            <a href="Sesion12/index.html">GALERÍA DE IMÁGENES</a>
         </div>
         <div class="elemento">
             <a href="Sesion20/index.html">Casting Tipográfico</a>
