--- a/Sesion16/index.html
+++ b/Sesion16/index.html
@@ -1,24 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Adobe</title>
-    <link href="estilos.css" rel="stylesheet" />
-  </head>
+    <link rel="stylesheet" href="estilos.css">
+</head>
 
-  <body>
+<body>
+    <nav id="nav">
+        <ul>
+            <li>Menú</li>
+            <li>Buscar</li>
+            <li>Iniciar sesión</li>
+        </ul>
+    </nav>
     <main>
-      <header>
-        <section class="C">
-          <img src="imagenes/Adobe_Systems_logo_and_wordmark.svg" alt="adobe">
+        <section id="A">
+            <img id="Adobe" src="imagenes/adobe.png" alt="Adobe">
+            <h2>Oferta especial. <br> Ya está aquí. Consigue un 20% de descuento</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.</p>
+            <p>
+                <a href="#">Más información sobre Creative Cloud</a>
+            </p>
+            <p>
+                <button>Elegir un plan</button>
+            </p>
         </section>
-      <section class="D">
-
-      </section>
-      </header>
-      <section class="A"></section>
-      <section class="B"></section>
+        <section id="B">
+            <div id="C">
+                <h3>Cosmos de María Grondlund</h3>
+                <hr>
+                <p>
+                    Creado con 
+                    <img src="imagenes/psd.jpg" alt="Photoshop">
+                    Photoshop
+                    <img src="imagenes/ai.jpg" alt="Illustrator">
+                    Illustrator
+                </p>
+                <p>
+                    <img src="imagenes/paleta.jpg" alt="Paleta color">
+                </p>
+            </div>
+        </section>
     </main>
-    <footer></footer>
-  </body>
+    <footer>
+        <nav id="footer">
+            <span>Ofertas especiales para: </span>Estudiantes | Fotógrafos | Empresas | Más
+        </nav>
+    </footer>
+</body>
+
 </html>
