--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="Sesion20/index.html">Casting Tipográfico</a>
         </div>
         <div class="elemento">
-            <a href="#">4</a>
+            <a href="Sesion16/index.html">Adobe</a>
         </div>
         <div class="elemento">
             <a href="#">5</a>
