--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div class="elemento">
             <a href="Sesion22/index.html">Bootstrap</a>
         </div>
+        <div class="elemento">
+            <a href="Sesion23/index.html">Bootstrap</a>
+        </div>
     </section>
 </body>
 
