--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="Sesion22/index.html">Bootstrap</a>
         </div>
         <div class="elemento">
-            <a href="Sesion23/index.html">Bootstrap</a>
+            <a href="Sesion23/index.html">Evernote</a>
         </div>
     </section>
 </body>
